--- a/WebAppService/Areas/Admin/Views/Shared/_ViewAdmin.cshtml
+++ b/WebAppService/Areas/Admin/Views/Shared/_ViewAdmin.cshtml
@@ -16,7 +16,7 @@
 	<link rel="shortcut icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/9187/9187604.png" />
 	<link rel="stylesheet" href="~/assets/css/styles.css" />
 	<title>Phần mềm quản lý</title>
-	<link rel="stylesheet" href="~/assets/libs/owl.carousel/dist/~/web/assets/owl.carousel.min.css" />
+	<link rel="stylesheet" href="~/assets/owl.carousel.min.css" />
 	<link href="~/assets/plug/bi-icon/bootstrap-icons.min.css" rel="stylesheet" />
 	<link href="~/assets/plug/data-table/bootstrap-table.min.css" rel="stylesheet" />
 	<link href="~/assets/libs/sweetalert2/dist/sweetalert2.min.css" rel="stylesheet" />
