--- a/WebAppService/Views/AboutUs/AboutUs.cshtml
+++ b/WebAppService/Views/AboutUs/AboutUs.cshtml
@@ -8,7 +8,9 @@
     <div class="thumb-overlay img-hover-slide position-relative" style="background-image: url(/web/assets/imgs/farme.png)">
     </div>
 </div>
-@Html.Raw(Model.NoiDung)
+<div class="aboutUsContent">
+    @Html.Raw(Model.NoiDung)
+</div>
 <!-- tại sao chọn chúng tôi -->
 <div class="question-doctor" style="background:#F9FCFF">
     <div class="container pt-30 pb-100 pl-30 pl-md-0">
@@ -16,7 +18,7 @@
             <!-- Bên trái: nội dung lý do -->
             <div class="col-md-12">
                 <div class="text-center">
-                    <span class="text-head-breadcrumb text-c-5">Tại sao <span class="text-primary-grd">chọn chúng tôi</span></span>
+                    <span class="text-head-breadcrumb text-ic-5">Tại sao <span class="text-primary-grd">chọn chúng tôi</span></span>
                 </div>
                 <p class="text-muted mb-4 text-center text-inter">
                     Chúng tôi tự hào là nơi hội tụ đội ngũ y bác sĩ tận tâm, trang thiết bị hiện đại và quy trình chăm sóc đạt chuẩn quốc tế – mang đến cho bạn sự an tâm tuyệt đối trong suốt hành trình bảo vệ và chăm sóc sức khỏe.
@@ -30,7 +32,7 @@
                     </div>
                     <div>
                         <h5 class="fw-bold mb-1 text-Montserrat">Đội ngũ y bác sĩ chuyên môn cao, tận tâm</h5>
-                        <p class="text-muted mb-0 text-inter">
+                        <p class="text-muted mb-0 text-inter" style="color:#6D6D6D !important">
                             Chúng tôi quy tụ các chuyên gia đầu ngành với nhiều năm kinh nghiệm, luôn đặt y đức và sự an toàn của người bệnh lên hàng đầu.
                         </p>
                     </div>
@@ -42,7 +44,7 @@
                     </div>
                     <div>
                         <h5 class="fw-bold mb-1 text-Montserrat">Trang thiết bị hiện đại, công nghệ tiên tiến</h5>
-                        <p class="text-muted mb-0 text-inter">
+                        <p class="text-muted mb-0 text-inter" style="color:#6D6D6D !important">
                             Bệnh viện đầu tư hệ thống máy móc và công nghệ chẩn đoán – điều trị đạt chuẩn quốc tế, giúp nâng cao hiệu quả khám chữa bệnh.
                         </p>
                     </div>
@@ -54,7 +56,7 @@
                     </div>
                     <div>
                         <h5 class="fw-bold mb-1 text-Montserrat">Y tế toàn diện, lấy bệnh nhân làm trung tâm</h5>
-                        <p class="text-muted mb-0 text-inter">
+                        <p class="text-muted mb-0 text-inter" style="color:#6D6D6D !important">
                             Từ tiếp nhận, thăm khám đến điều trị và chăm sóc hậu kỳ, mọi quy trình đều được xây dựng để phục vụ tốt nhất cho người bệnh và người nhà.
                         </p>
                     </div>
