--- a/WebAppService/Views/Home/Index - Copy.cshtml
+++ b/WebAppService/Views/Home/Index - Copy.cshtml
@@ -97,13 +97,16 @@
 <!-- Phần giới thiệu dịch vụ đặc biệt -->
 <div class="entry-header entry-header-2 mb-0 text-center" id="LayoutHome2">
     <div class="position-relative layout-home-white">
+        <img src="~/src/image_figma/Vector.png" class="dot-left" alt="dot-left" />
+        <img src="~/src/image_figma/Vector_1.png" class="dot-right" alt="dot-right" />
+
         <div class="container p-0 mt-5">
-            <div class="author-bio border-radius-10 p-30 mt-100 mt-sm-60 mb-40 d-flex flex-column flex-md-row" id="author-bio_bt">
-                <div class="t_mb d-block d-sm-none text-left" >Về chúng tôi</div>
+            <div class="author-bio border-radius-10 p-30 mtauthordv mt-sm-60 mb-0 d-flex flex-column flex-md-row" id="author-bio_bt">
+                <div class="t_mb d-block d-sm-none text-left">Về chúng tôi</div>
                 <div class="t_mb2 d-block d-sm-none text-left">Hành Trình Vì Sức Khỏe Cộng Đồng</div>
                 <div class="img_avt2 col-sm-5 mb-30 text-center d-flex">
                     <div class="avatar2" style="width:453.98px;height:443.88px">
-                        <a href="author.html"><img src="/root/group 4.png" alt="" ></a>
+                        <a href="author.html"><img src="/root/group 4.png" alt=""></a>
                     </div>
                 </div>
                 <div class="title_sv col-sm-7 author-info d-flex flex-column justify-content-center d-none d-sm-block">
@@ -120,7 +123,7 @@
                         Với đội ngũ chuyên gia giàu kinh nghiệm cùng hệ thống trang thiết bị tiên tiến, các dịch vụ đặc biệt tại Sun Medical không chỉ mang lại hiệu quả điều trị vượt trội mà còn đảm bảo tính cá nhân hóa cao, phù hợp với từng thể trạng và nhu cầu riêng biệt của khách hàng. Chúng tôi tự hào là điểm đến đáng tin cậy cho những ai đang tìm kiếm giải pháp chăm sóc sức khỏe kết hợp giữa y học hiện đại và yếu tố thẩm mỹ tinh tế.
                     </div>
 
-                    <div class="author-info-small-text d-block d-sm-none">
+                    <div class="author-info-small-text d-block d-sm-none author-info-mobile">
                         Từ những ngày đầu thành lập, chúng tôi đã xác định sứ mệnh cốt lõi là phục vụ và chăm sóc sức khỏe cộng đồng một cách toàn diện, tận tâm và bền vững. Không chỉ là nơi khám chữa bệnh, bệnh viện còn là điểm tựa tinh thần – nơi bệnh nhân và người nhà tìm thấy sự an tâm và hy vọng.
                         Chúng tôi tự hào với đội ngũ y bác sĩ chuyên môn cao, giàu y đức cùng hệ thống trang thiết bị hiện đại, luôn sẵn sàng ứng dụng các phương pháp điều trị tiên tiến. Mỗi dịch vụ đều được thực hiện với tinh thần tận tụy và lấy người bệnh làm trung tâm.
                     </div>
@@ -131,6 +134,17 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="social-float-buttons">
+        <a href="#" target="_blank" class="social-btn messenger">
+            <img src="~/src/image_figma/message.png" alt="Messenger">
+        </a>
+        <a href="#" target="_blank" class="social-btn zalo">
+            <img src="~/src/image_figma/zalo.png" alt="Zalo">
+        </a>
+        <a href="#" target="_blank" class="social-btn whatsapp">
+            <img src="~/src/image_figma/phone.png" width="150px" alt="WhatsApp">
+        </a>
     </div>
 </div>
 
