--- a/WebAppService/Views/Shared/_Footer.cshtml
+++ b/WebAppService/Views/Shared/_Footer.cshtml
@@ -5,11 +5,11 @@
                 <div class="col-sm-6 mb-30">
                     <div class="footer-container">
                         <div class="footer-left">
-                            <div class="footer-logo mb-20" style="justify-content: center;">
+                            <div class="footer-logo mb-20">
                                 <img src="~/web/images/Group.png" alt="Sun Medical Center" height="50" />
                             </div>
 
-                            <p class="footer-desc m-0 text-center">
+                            <p class="footer-desc m-0">
                                 Mang đến dịch vụ y tế chất lượng cao với đội ngũ bác sĩ chuyên môn giỏi, trang thiết bị hiện đại và quy trình chăm sóc tận tâm. Chúng tôi cam kết bảo vệ sức khỏe của bạn và gia đình, cung cấp giải pháp y tế toàn diện từ phòng ngừa đến điều trị, giúp bạn an tâm và khỏe mạnh mỗi ngày.
                             </p>
                             <div class="social-icons mt-20">
@@ -23,7 +23,7 @@
 
                 <div class="col-sm-2 col-6">
                     <ul class="float-left mr-30 font-medium">
-                        <li class="cat-item cat-item-2 text-c-10" style="font-weight:bold;margin-bottom:20px"><a href="category.html">Company</a></li>
+                        <li class="cat-item cat-item-2 text-c-10" style="font-weight:bold;margin-bottom:20px"><a href="category.html">Sun Medical</a></li>
                         <li class="cat-item cat-item-3 text-c-9"><a href="#">Về chúng tôi</a></li>
                         <li class="cat-item cat-item-4 text-c-9"><a href="#">Dịch vụ</a></li>
                         <li class="cat-item cat-item-5 text-c-9"><a href="#">Đặt lịch</a></li>
@@ -33,7 +33,7 @@
                 </div>
                 <div class="col-sm-2 col-6 mb-30">
                     <ul class="float-left mr-30 font-medium">
-                        <li class="cat-item cat-item-2 text-c-10" style="font-weight:bold;margin-bottom:20px"><a href="category.html">Support</a></li>
+                        <li class="cat-item cat-item-2 text-c-10" style="font-weight:bold;margin-bottom:20px"><a href="category.html">Hỗ trợ</a></li>
                         <li class="cat-item cat-item-3 text-c-9"><a href="#">Về chúng tôi</a></li>
                         <li class="cat-item cat-item-4 text-c-9"><a href="#">Dịch vụ</a></li>
                         <li class="cat-item cat-item-5 text-c-9"><a href="#">Đặt lịch</a></li>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="col-sm-2 col-6">
                     <ul class="float-left mr-30 font-medium">
-                        <li class="cat-item cat-item-2 text-c-10" style="font-weight:bold;margin-bottom:20px"><a href="category.html">Contact</a></li>
+                        <li class="cat-item cat-item-2 text-c-10" style="font-weight:bold;margin-bottom:20px"><a href="category.html">Liên hệ</a></li>
                         <li class="cat-item cat-item-3 text-c-9"><a href="#">Về chúng tôi</a></li>
                         <li class="cat-item cat-item-4 text-c-9"><a href="#">Dịch vụ</a></li>
                         <li class="cat-item cat-item-5 text-c-9"><a href="#">Đặt lịch</a></li>
@@ -57,11 +57,12 @@
     <!-- footer-bottom aera -->
     <div class="footer-bottom-area text-muted" style="background:#EDFFFF">
         <div class="container">
-            <div class="footer-border pt-20 pb-20">
+            <div class="footer-border p-0">
                 <div class="row d-flex align-items-center justify-content-between">
                     <div class="col-12">
                         <div class="footer-copy-right">
-                            <p class="font-small text-muted">Copyright ©2025 <strong>SunMedical</strong></p>
+                            <p class="font-small text-muted">Copyright ©2025 <strong style="color:#000">SunMedical</strong></p>
+                            <p class="font-small text-muted">Design by <strong style="color:#000">Le Vu Media</strong></p>
                         </div>
                     </div>
                 </div>
