--- a/WebAppService/Views/Shared/_ScriptsBundle.cshtml
+++ b/WebAppService/Views/Shared/_ScriptsBundle.cshtml
@@ -13,9 +13,10 @@
 <script src="~/web/assets/js/vendor/jquery.counterup.min.js"></script>
 <script src="~/web/assets/js/vendor/jquery.theia.sticky.js"></script>
 <script src="~/web/assets/js/main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 <script src="https://www.google.com/recaptcha/api.js?hl=vi" async defer></script>
 <script src="~/ajax/webappclient.config.js"></script>
-<script src="~/web/assets/js/vendor/tsl.js?cb=googleTranslateElementInit" async></script>>
+<script src="~/web/assets/js/vendor/tsl.js?cb=googleTranslateElementInit" async></script>
 <script src="~/ajax/webappclient.settinghome.js"></script>
