--- a/WebAppService/wwwroot/web/assets/css/doctor-detail.css
+++ b/WebAppService/wwwroot/web/assets/css/doctor-detail.css
@@ -39,6 +39,7 @@
 
 .profile-info {
     max-width: 600px;
+    padding-left: 40px;
 }
 
 .name {
@@ -137,5 +138,8 @@ h3 {
         color: #2F4848;
         margin-bottom: 5px;
         font-family: 'Plus Jakarta Sans', sans-serif;
+    }
+    .profile-info {
+        padding-left: 0px;
     }
 }
