--- a/WebAppService/wwwroot/web/assets/css/style.css
+++ b/WebAppService/wwwroot/web/assets/css/style.css
@@ -54,7 +54,7 @@ body {
     font-family: 'Montserrat',sans-serif;
     font-weight: normal;
     font-style: normal;
-    background: #fcfcfc;
+    background: transparent;
 }
 
 h1,
