--- a/WebAppService/wwwroot/web/assets/css/widgets.css
+++ b/WebAppService/wwwroot/web/assets/css/widgets.css
@@ -152,7 +152,22 @@ nav.tab-nav .nav-tabs{border:none;}
 .video-area{background-image:url(../imgs/bg-20.png);background-repeat:no-repeat;background-color:#021228;background-position:left center;color:#8b8cb3;}
 .video-area .letter-background,
 .footer-area .letter-background{color:rgba(255,255,255,0.2);}
-.play_btn a{color:#212d45;width:70px;height:70px;display:inline-block;border-radius:50%;text-align:center;line-height:70px;font-size:29px;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);z-index:9;background:rgba(255,255,255,1);display:block;}
+.play_btn a {
+    color: #212d45;
+    width: 70px;
+    height: 70px;
+    display: inline-block;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 70px;
+    font-size: 29px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-80%, -90%);
+    z-index: 9;
+    display: block;
+}
 .play_btn.play_btn_small a{width:40px;height:40px;line-height:40px;font-size:10px;}
 .play_btn.play_btn_small a i{margin-right:-3px;}
 
