--- a/WebAppService/Views/FAQ/Index.cshtml
+++ b/WebAppService/Views/FAQ/Index.cshtml
@@ -41,13 +41,19 @@
                             <img src="@Url.Content("~/root/imglh.png")" alt="Doctor" class="doctor-overlay">
                         </div>
                     </div>
-                    <div class="form col-md-8 position-absolute tranform-x  px-form bg-form" style="z-index:100">
+                    <div class="form col-md-8 position-absolute tranform-x ml-30  px-form bg-form" style="z-index:100;margin: 0px !important;">
                         <div class="txt-dkk">Đăng ký khám, nhận thông tin mới từ chúng tôi!</div>
                         <div class="mt-30 row">
                             <div class="col-md-6 p-0">
-                                <div class="col-md-12 form-group">
-                                    <span class="me-3"><input type="radio" name="gender" checked> Ông</span>
-                                    <span><input type="radio" name="gender"> Bà</span>
+                                <div class="col-md-12 form-group mb-2">
+                                    <span class="me-3">
+                                        <input type="radio" name="gender" id="gender-male" value="male" checked style="accent-color: #F26522;">
+                                        <label for="gender-male">Ông</label>
+                                    </span>
+                                    <span>
+                                        <input type="radio" name="gender" id="gender-female" value="female" style="accent-color: #F26522;">
+                                        <label for="gender-female">Bà</label>
+                                    </span>
                                 </div>
                                 <div class="form-group col-md-12">
                                     <input type="text" class="form-control" id="ho_ten" placeholder="Nhập tên của bạn...">
@@ -55,8 +61,12 @@
                                 <div class="form-group col-md-12">
                                     <input type="email" class="form-control" id="email" placeholder="Nhập email của bạn...">
                                 </div>
-                                <div class="form-group col-md-12  hide-on-mobile">
-                                    <a href="#" onclick="SendForm()" class="btn main-menu  d-lg-inline btn-orrange px-5 py-2">Gửi</a>
+
+                                <div class="form-group mt-2 col-md-12 hide-on-mobile">
+                                    <div class="g-recaptcha" data-sitekey="@ViewBag.ReCaptchaKey"></div>
+                                </div>
+                                <div class="form-group col-md-6 hide-on-mobile" style="margin-top:30px">
+                                    <a href="#" onclick="CheckBeforeSend()" class="btn main-menu border-radius-5 d-lg-inline btn-orrange py-2 w-100" style=" padding: 0px 67px;font-weight: 700;font-family: 'Montserrat'">Gửi</a>
                                 </div>
                             </div>
                             <div class="col-md-6 mt-form p-0">
@@ -64,21 +74,25 @@
                                     <input type="text" class="form-control" id="so_dien_thoai" placeholder="Số điện thoại của bạn">
                                 </div>
                                 <div class="form-group col-md-12">
-                                    <textarea class="form-control" id="loi_nhan" rows="5" placeholder="Nhập lời nhắn...">
-                                    </textarea>
+                                    <textarea class="form-control" id="loi_nhan" rows="5" placeholder="Nhập lời nhắn..."></textarea>
                                 </div>
                             </div>
                         </div>
                         <!-- Nút gửi để dưới toàn form -->
-                        <div class="form-group col-md-12 p-0  d-block d-md-none">
+                        <!--div class="form-group col-md-12 p-0  d-block d-md-none">
                             <a href="#" onclick="SendForm()" class="btn main-menu btn-orrange w-100" style="padding:20px">Gửi</a>
+                        </div>-->
+                        <div class="form-group col-md-12 p-0  d-block d-md-none">
+                            <div class="g-recaptcha" data-sitekey="@ViewBag.ReCaptchaKey"></div>
+                        </div>
+                        <div class="form-group col-md-12 p-0  d-block d-md-none">
+                            <a href="#" onclick="CheckBeforeSend()" class="btn main-menu btn-orrange w-100" style="padding:20px">Gửi</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
 </div>
 
  <script id="news-template" type="text/x-dot-template">
