--- a/WebAppService/Views/LienHe/LienHe.cshtml
+++ b/WebAppService/Views/LienHe/LienHe.cshtml
@@ -36,11 +36,29 @@
                     </p>
                 </div>
                 <div class="col-md-12 mt-3 p-0">
-                    <span class="txt-c-1 color-black mr-3"><i class="color-orrange fa fa-volume-control-phone"></i> 123.456.7890 </span>
-                    <span class="txt-c-1 color-black"><i class="color-orrange fa fa-envelope"></i> info@loremipsum.com </span>
+                    <span class="txt-c-1 color-black mr-3">
+                        <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M0 4.8231C0.0137069 5.59012 0.157639 6.34905 0.425537 7.06697C0.675984 7.72996 0.997019 8.36355 1.38299 8.95659C1.84044 9.64822 2.35657 10.2985 2.92556 10.8999C3.52779 11.5529 4.17097 12.1661 4.85111 12.7358C5.64085 13.4158 6.48405 14.0297 7.3724 14.5717C8.04485 14.982 8.75795 15.3203 9.50008 15.581C10.0242 15.7643 10.5663 15.8903 11.1171 15.9568C11.8939 16.0502 12.6813 15.9919 13.4363 15.7849C14.1566 15.5705 14.8237 15.2046 15.3937 14.7113C15.668 14.4759 15.9143 14.2093 16.1278 13.9168L16.6065 13.3585C16.7417 13.2148 16.8499 13.0475 16.9257 12.8647C16.9839 12.7157 17.0085 12.5555 16.9974 12.3957C16.9864 12.236 16.94 12.0807 16.8618 11.9413C16.6843 11.6494 16.4532 11.3944 16.181 11.1898C15.8299 10.9107 15.4363 10.6744 15.0533 10.4275C14.7794 10.2463 14.4952 10.0814 14.2023 9.93364C13.9005 9.77438 13.5724 9.67245 13.2342 9.63299C13.0138 9.60204 12.7893 9.62174 12.5775 9.69053C12.3656 9.75931 12.1719 9.87539 12.0107 10.0302C11.8193 10.2128 11.649 10.4275 11.4575 10.6315C11.2865 10.8272 11.13 11.0352 10.9895 11.2542C10.8136 11.5088 10.5593 11.6975 10.266 11.791C10.0111 11.8556 9.74437 11.8556 9.48945 11.791C9.14318 11.6999 8.81047 11.5627 8.50008 11.383C7.95236 11.0715 7.43265 10.7122 6.94687 10.3094C6.48441 9.9233 6.04398 9.51105 5.62771 9.07468C5.24536 8.68777 4.91618 8.25087 4.64898 7.77561C4.50052 7.51565 4.40978 7.22622 4.38302 6.92739C4.37141 6.76044 4.39478 6.59289 4.4516 6.43566C4.50842 6.27842 4.59742 6.13504 4.71281 6.01482C4.7604 5.95252 4.81385 5.89496 4.87238 5.843C5.12801 5.61006 5.36295 5.35504 5.57452 5.08076C5.70396 4.93691 5.82138 4.78257 5.92558 4.61917C6.04499 4.42135 6.11851 4.19875 6.14062 3.96819C6.16273 3.73764 6.13286 3.50499 6.05325 3.28773C5.93918 2.89719 5.75134 2.53262 5.50005 2.21409C5.21282 1.84905 4.9043 1.48401 4.60642 1.14045C4.39416 0.883247 4.15915 0.646162 3.90429 0.43194C3.72202 0.273833 3.513 0.150082 3.28727 0.0668078C3.10901 0.000156281 2.91631 -0.016982 2.72921 0.0170051C2.54212 0.0509923 2.36747 0.134921 2.22343 0.260121C2.08081 0.38794 1.94582 0.524179 1.81917 0.66811L1.23406 1.33376C0.869898 1.74589 0.578443 2.21803 0.37235 2.72955C0.17982 3.19957 0.054446 3.69481 0 4.20043C0.0212768 4.40442 0.0212768 4.61911 0 4.8231Z" fill="#F26522" />
+                        </svg>
+                        123.456.7890
+                    </span>
+                    <span class="txt-c-1 color-black">
+                        <svg width="18" height="13" viewBox="0 0 18 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.165648 13L6.521 6.14172L8.99485 8.24871L11.4894 6.14172L17.8447 13H0.165648Z" fill="#F26522" />
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.476221 0H17.5239L9.00524 7.58513L0.476221 0Z" fill="#F26522" />
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M6.21046 5.84671L0 12.568V0.315844L6.21046 5.84671Z" fill="#F26522" />
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M11.7895 5.84671L18 0.336934V12.5365C15.8988 10.261 13.87 8.08012 11.7895 5.84671Z" fill="#F26522" />
+                        </svg>
+                        info@loremipsum.com
+                    </span>
                 </div>
                 <div class="col-md-12 mt-3 p-0">
-                    <span class="txt-c-1 color-black mr-3"><i class="color-orrange fa fa-map-marker"></i> Tòa nhà Times Tower, 35 D. Lê Văn Lương, Nhân Chính, Thanh Xuân, Hà Nội </span>
+                    <span class="txt-c-1 color-black mr-3">
+                        <svg width="15" height="20" viewBox="0 0 15 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M6.60938 18.6836C4.67969 16.2715 0.375 10.5195 0.375 7.25391C0.375 3.32031 3.5293 0.128906 7.5 0.128906C11.4336 0.128906 14.625 3.32031 14.625 7.25391C14.625 10.5195 10.2832 16.2715 8.35352 18.6836C7.9082 19.2402 7.05469 19.2402 6.60938 18.6836ZM7.5 9.62891C8.79883 9.62891 9.875 8.58984 9.875 7.25391C9.875 5.95508 8.79883 4.87891 7.5 4.87891C6.16406 4.87891 5.125 5.95508 5.125 7.25391C5.125 8.58984 6.16406 9.62891 7.5 9.62891Z" fill="#F26522" />
+                        </svg>
+                        Tòa nhà Times Tower, 35 D. Lê Văn Lương, Nhân Chính, Thanh Xuân, Hà Nội
+                    </span>
                 </div>
             </div>
         </div>
@@ -48,7 +66,7 @@
         <div class="form-group col-md-12 p-0  d-block d-md-none">
             <a href="#" class="form-group col-md-12 p-30 pt-10 m-0 d-block d-md-none" style="padding:20px">Liên hệ</a>
         </div>
-        <div class="question-doctor mt-120" >
+        <div class="question-doctor mt-120">
             <div class="container pl-md-0">
                 <div class="">
                     <div class="form-section-wrapper mb-30 row">
@@ -57,17 +75,17 @@
                                 <img src="@Url.Content("~/root/imglh.png")" alt="Doctor" class="doctor-overlay">
                             </div>
                         </div>
-                        <div class="form col-md-8 position-absolute tranform-x ml-30  px-form bg-form" style="z-index:100">
+                        <div class="form col-md-8 position-absolute tranform-x ml-30  px-form bg-form" style="z-index:100;margin: 0px !important;">
                             <div class="txt-dkk">Đăng ký khám, nhận thông tin mới từ chúng tôi!</div>
                             <div class="mt-30 row">
                                 <div class="col-md-6 p-0">
-                                    <div class="col-md-12 form-group">
+                                    <div class="col-md-12 form-group mb-2">
                                         <span class="me-3">
-                                            <input type="radio" name="gender" id="gender-male" value="male" checked>
+                                            <input type="radio" name="gender" id="gender-male" value="male" checked style="accent-color: #F26522;">
                                             <label for="gender-male">Ông</label>
                                         </span>
                                         <span>
-                                            <input type="radio" name="gender" id="gender-female" value="female">
+                                            <input type="radio" name="gender" id="gender-female" value="female" style="accent-color: #F26522;">
                                             <label for="gender-female">Bà</label>
                                         </span>
                                     </div>
@@ -77,8 +95,8 @@
                                     <div class="form-group col-md-12">
                                         <input type="email" class="form-control" id="email" placeholder="Nhập email của bạn...">
                                     </div>
-                                  
-                                    <div class="form-group mt-2 col-md-12">
+
+                                    <div class="form-group mt-2 col-md-12 hide-on-mobile">
                                         <div class="g-recaptcha" data-sitekey="@ViewBag.ReCaptchaKey"></div>
                                     </div>
                                     <div class="form-group col-md-6 hide-on-mobile" style="margin-top:30px">
@@ -90,16 +108,17 @@
                                         <input type="text" class="form-control" id="so_dien_thoai" placeholder="Số điện thoại của bạn">
                                     </div>
                                     <div class="form-group col-md-12">
-                                        <textarea class="form-control" id="loi_nhan" rows="5" placeholder="Nhập lời nhắn...">
-                                    </textarea>
+                                    <textarea class="form-control" id="loi_nhan" rows="5" placeholder="Nhập lời nhắn..."></textarea>
                                     </div>
                                 </div>
                             </div>
                             <!-- Nút gửi để dưới toàn form -->
-                        
                             <!--div class="form-group col-md-12 p-0  d-block d-md-none">
                                 <a href="#" onclick="SendForm()" class="btn main-menu btn-orrange w-100" style="padding:20px">Gửi</a>
                             </div>-->
+                            <div class="form-group col-md-12 p-0  d-block d-md-none">
+                                <div class="g-recaptcha" data-sitekey="@ViewBag.ReCaptchaKey"></div>
+                            </div>
                             <div class="form-group col-md-12 p-0  d-block d-md-none">
                                 <a href="#" onclick="CheckBeforeSend()" class="btn main-menu btn-orrange w-100" style="padding:20px">Gửi</a>
                             </div>
@@ -119,53 +138,79 @@
         </div>
     </div>
 </div>
-
-  <script>
-  function CheckBeforeSend() {
-    var response = grecaptcha.getResponse();
-    if (response.length === 0) {
-      alert("Vui lòng xác minh bạn không phải robot (tick vào checkbox).");
-      return;
-    }
-    // Nếu reCAPTCHA đã tick, gọi hàm SendForm
-    SendForm();
-  }
-
-  function SendForm() {
-    var ho_ten = $("#ho_ten").val();
-    var so_dien_thoai = $("#so_dien_thoai").val();
-    var email = $("#email").val();
-    var loi_nhan = $("#loi_nhan").val();
-
-    if (ho_ten == "") {
-        alert("Họ tên không được để trống!");
-        $("#ho_ten").focus();
+@* 
+<script>
+    function CheckBeforeSend() {
+      var response = grecaptcha.getResponse();
+      if (response.length === 0) {
+        Toastify({
+            text: "Vui lòng xác minh trước khi gửi",
+            duration: 2000,
+            close: true,
+            gravity: "top",
+            position: "right",
+            backgroundColor: "red"
+        }).showToast();
         return;
-    }
-    if (loi_nhan == "") {
-        alert("Nội dung không được để trống!");
-        $("#loi_nhan").focus();
-        return;
+      }
+      SendForm();
     }
 
-    var data = {
-        ho_ten: ho_ten,
-        so_dien_thoai: so_dien_thoai,
-        email: email,
-        loi_nhan: loi_nhan,
-        gRecaptchaResponse: grecaptcha.getResponse()
-    };
+    function SendForm() {
+      var ho_ten = $("#ho_ten").val();
+      var so_dien_thoai = $("#so_dien_thoai").val();
+      var email = $("#email").val();
+      var loi_nhan = $("#loi_nhan").val();
 
-    $.ajax({
-        type: "POST",
-        url: "/verify",
-        data: data,
-        success: function (res) {
-            alert(res); // Trả về kết quả xử lý từ controller
-        },
-        error: function () {
-            alert("Lỗi kết nối tới server.");
-        }
-    });
-  }
+      if (ho_ten == "") {
+             Toastify({
+              text: "Họ tên không được để trống!",
+              duration: 2000,
+              close: true,
+              gravity: "top",
+              position: "right",
+              backgroundColor: "red"
+            }).showToast();
+          $("#ho_ten").focus();
+          return;
+      }
+      if (loi_nhan == "") {
+           Toastify({
+              text: "Họ tên không được để trống!",
+              duration: 2000,
+              close: true,
+              gravity: "top",
+              position: "right",
+              backgroundColor: "red"
+            }).showToast();
+          $("#loi_nhan").focus();
+          return;
+      }
+
+      var data = {
+          ho_ten: ho_ten,
+          so_dien_thoai: so_dien_thoai,
+          email: email,
+          loi_nhan: loi_nhan,
+          gRecaptchaResponse: grecaptcha.getResponse()
+      };
+
+      $.ajax({
+          type: "POST",
+          url: "/verify",
+          data: data,
+          success: function (res) {
+                Swal.fire({
+                  title: 'Thành công!',
+                  text: 'Dữ liệu đã được gửi.',
+                  icon: 'success',
+                  confirmButtonText: 'OK'
+                });
+          },
+          error: function () {
+              alert("Lỗi kết nối tới server.");
+          }
+      });
+    }
 </script>
+ *@
