--- a/WebAppService/Views/Shared/_StyleBundle.cshtml
+++ b/WebAppService/Views/Shared/_StyleBundle.cshtml
@@ -7,6 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 <link rel="stylesheet" href="~/web/css/site.css" asp-append-version="true" />
 <link href="~/web/css/layout.css" rel="stylesheet" />
 <link rel="stylesheet" href="~/web/assets/css/style.css">
